# erp

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  .stubs-approved.md  AGENTS.md  CLAUDE.md  CONVENTION_SWEEP_BASELINE.md  E2E_BOOTSTRAP_FIXES.md  FIXED_ASSETS_UAT_RUNBOOK.md  README.md  TREASURY_GAP_AUDIT.md  dev.sh  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  start.sh  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.workspace.ts
backend/: .env.example  Dockerfile  Dockerfile.worker  README.md  VENDOR_INTEGRATIONS.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 194ce74abb0c_add_missing_soft_delete_columns.py  4aeb501e0e8c_add_debit_note_and_credit_note_voucher_.py  74c88413b1e7_increase_account_group_code_column_size.py  a0000000001_create_base_tables.py  aa0_add_idempotency_key.py  aa1_add_version_to_remaining_tables.py  (+144 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/scripts/: audit_optimistic_locking.py  create_superuser.py  reset_db.py  reset_password.py  seed_all_modules.py  seed_ap_ar_data.py  seed_client_demo.py  seed_data.py  seed_e2e.sh  seed_e2e_iif_chain.py  seed_ess_hrms_demo.py  seed_ess_masters.py  seed_fixed_assets_data.py  seed_hr_training_data.py  seed_inventory_data.py  seed_kyc_data.py  seed_legal_data.py  seed_legal_data_direct.py  seed_legal_masters.py  seed_procurement_data.py  seed_treasury_data.py  seed_uat_manual_lending.py
backend/tests/: __init__.py  conftest.py
(+1843 files in other folders)
